Bug 292775 - If another application is using apt
Summary: If another application is using apt
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-29 10:18 UTC by Victor Varvaryuk
Modified: 2012-03-24 01:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.1
Sentry Crash Report:


Attachments
the mouse cursor remains `busy` and packages list is disabled (186.67 KB, image/png)
2012-01-29 10:18 UTC, Victor Varvaryuk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2012-01-29 10:18:11 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

If another application is using apt, a message about this appears, but mouse cursor is still showing busy and packages list is disabled.

Reproducible: Always

Steps to Reproduce:
Mark a package in Muon for installation/removal/upgrade. Before pressing 'Apply changes', run `apt-get upgrade` or similar in console.

Actual Results:  
Muon shows a message is shown that another application is using apt. After closing the message the mouse cursor remains `busy` and packages list is disabled, though menu is enabled.

Expected Results:  
Mouse cursor shown become normal and packages list should be enabled.
Comment 1 Victor Varvaryuk 2012-01-29 10:18:27 UTC
Created attachment 68294 [details]
the mouse cursor remains `busy` and packages list is disabled
Comment 2 Jonathan Thomas 2012-03-24 01:29:34 UTC
Git commit f7a15f904c7a38e53ec795b4d81f5f8020301947 by Jonathan Thomas.
Committed on 24/03/2012 at 02:28.
Pushed by jmthomas into branch '1.3'.

Properly reset the UI when a LockError cancels a pending commit.
FIXED-IN:1.3.1

M  +1    -0    muon/MainWindow.cpp

http://commits.kde.org/muon/f7a15f904c7a38e53ec795b4d81f5f8020301947
Comment 3 Jonathan Thomas 2012-03-24 01:29:35 UTC
Git commit 2214ffba343db40093e47f0db6ff2b9401608b29 by Jonathan Thomas.
Committed on 24/03/2012 at 02:28.
Pushed by jmthomas into branch 'master'.

Properly reset the UI when a LockError cancels a pending commit.
FIXED-IN:1.3.1

M  +1    -0    muon/MainWindow.cpp

http://commits.kde.org/muon/2214ffba343db40093e47f0db6ff2b9401608b29