Properly reset the UI when a LockError cancels a pending commit.

BUG:292775
FIXED-IN:1.3.1